--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
-name: Deploy Python App
+name: Deploy and Expose Flask App
+
 on:
   workflow_dispatch:
     inputs:
@@ -15,24 +16,40 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # Checkout code
+      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Python
+      # Step 2: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: "3.9"
 
-      # Install dependencies
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run the Python app
-      - name: Run the Python app
+      # Step 4: Install and configure ngrok
+      - name: Install ngrok
+        run: |
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc > /dev/null
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list > /dev/null
+          sudo apt update
+          sudo apt install -y ngrok
+
+      # Step 5: Start Flask app and expose it with ngrok
+      - name: Start Flask app and expose with ngrok
         run: |
           nohup python app.py &
-          echo "Application is running on branch ${{ inputs.branch }} in target ${{ inputs.target_name }}"
+          nohup ngrok http 5000 &
+          sleep 10
+          curl -s localhost:4040/api/tunnels | jq '.tunnels[0].public_url'
+
+      # Step 6: Display ngrok URL
+      - name: Display ngrok public URL
+        run: |
+          curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+
