--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Install and configure ngrok
+      # Step 4: Install ngrok
       - name: Install ngrok
         run: |
           curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc > /dev/null
@@ -40,15 +40,19 @@ jobs:
           sudo apt update
           sudo apt install -y ngrok
 
-      # Step 5: Start Flask app and expose it with ngrok
+      # Step 5: Authenticate ngrok
+      - name: Authenticate ngrok
+        run: ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+
+      # Step 6: Start Flask app and expose with ngrok
       - name: Start Flask app and expose with ngrok
         run: |
           nohup python app.py &
           nohup ngrok http 5000 &
           sleep 10
-          curl -s localhost:4040/api/tunnels | jq '.tunnels[0].public_url'
+          curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url'
 
-      # Step 6: Display ngrok URL
+      # Step 7: Display ngrok public URL
       - name: Display ngrok public URL
         run: |
           curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url'
