--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS
+name: Deploy to AWS with Cased
 
 on:
   workflow_dispatch:
@@ -16,33 +16,34 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # Checkout code
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Install dependencies (optional for linting/tests)
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.9"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # Deploy Flask app to AWS EC2 using SSH
-      - name: Deploy to AWS EC2
+      # Step 2: Use AWS credentials from Cased
+      - name: Assume Role with Cased
         env:
-          AWS_HOST: ${{ secrets.AWS_HOST }}           # Public IP of EC2 instance
-          AWS_USER: ${{ secrets.AWS_USER }}           # EC2 username (e.g., ec2-user)
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }} # Private key for SSH access
+          AWS_REGION: us-west-2                     # Replace with your selected region
+          ROLE_ARN: ${{ secrets.CASED_AWS_ROLE_ARN }} # ARN from Cased connection
         run: |
-          echo "${SSH_PRIVATE_KEY}" > private_key.pem
-          chmod 600 private_key.pem
-          scp -i private_key.pem -r . $AWS_USER@$AWS_HOST:~/flask-app
-          ssh -i private_key.pem $AWS_USER@$AWS_HOST << 'EOF'
-          cd ~/flask-app
-          python3 -m pip install -r requirements.txt
-          nohup python3 app.py &
+          echo "Assuming role using Cased..."
+          aws sts assume-role \
+            --role-arn $ROLE_ARN \
+            --role-session-name "CasedSession" > creds.json
+          export AWS_ACCESS_KEY_ID=$(cat creds.json | jq -r '.Credentials.AccessKeyId')
+          export AWS_SECRET_ACCESS_KEY=$(cat creds.json | jq -r '.Credentials.SecretAccessKey')
+          export AWS_SESSION_TOKEN=$(cat creds.json | jq -r '.Credentials.SessionToken')
+
+      # Step 3: Deploy the application
+      - name: Deploy Flask App
+        env:
+          AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+          AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+          AWS_SESSION_TOKEN: $AWS_SESSION_TOKEN
+        run: |
+          echo "Deploying branch ${{ inputs.branch }} to target ${{ inputs.target_name }}..."
+          ssh -i private_key.pem ec2-user@<EC2_PUBLIC_IP> << EOF
+            cd ~/flask-app
+            git pull origin ${{ inputs.branch }}
+            nohup python3 app.py &
           EOF
