--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,11 @@ on:
     inputs:
       branch:
         description: "Branch to deploy"
-        required: true
+        required: false
         default: main
       target_name:
         description: "Deployment target (e.g., staging or production)"
-        required: true
+        required: false
         default: production
 
 jobs:
