--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: deploy
+name: Deploy with EC2
 on:
   workflow_dispatch:
     inputs:
@@ -10,8 +10,29 @@ on:
         default: production
 jobs:
   deploy:
+    name: Deploy Flask App to EC2
     runs-on: ubuntu-latest
+
     steps:
-      - name: Deploy to target
-        run: |
-          echo "Deploying to ${{ inputs.target }} from ${{ inputs.branch }}"
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Deploy to EC2
+      run: |
+        ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << EOF
+          # Update and install dependencies
+          sudo apt update
+          sudo apt install -y python3 python3-pip git
+
+          # Clone the repository
+          git clone https://github.com/Omar-Ahmed-Dt/flask-test.git flask-app || (cd flask-app && git pull)
+
+          # Change to app directory
+          cd flask-app
+
+          # Install Python dependencies
+          pip3 install -r requirements.txt
+
+          # Run the Flask app
+          nohup python3 app.py &
+        EOF
